# jadevid

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  player-main.rs  player.rs  scene.slint
src/ff_interop/: mod.rs  video_player.rs
src/player/: audio.rs  video.rs
src/project/: framenum.rs  framespan.rs  media_project.rs  media_ref.rs  mod.rs  rational.rs
src/ui/: jadevid-ui-main.fl  mod.rs  shader.wgsl
