[package]
name = "jadevid"
description = "A video editor...I'm trying again...Maybe I'll get somewhere :shrug:"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["CJ Burkey <bulletlanguage@gmail.com>"]
build = "build.rs"

[dependencies]
anyhow = "1.0"
ffmpeg-next = "7.1.0"
fl2rust-macro = "0.6.0"
fltk = { version = "1.5.3", features = ["fltk-bundled", "rwh06"] }
futures-lite = "2.6.0"
serde = "1.0"
slotmap = { version = "1.0.7", features = ["serde"] }
wgpu = "24.0.1"
